--- a/pages/bookSearch/bookInfo/bookList.wxss
+++ b/pages/bookSearch/bookInfo/bookList.wxss
@@ -1,5 +1,44 @@
 /* pages/bookSearch/bookInfo/bookList.wxss */
+@import "../../common/weui.wxss";
+
 .bookImg {
   width: 120rpx;
   height: 160rpx;
+}
+
+page {
+  background-color: #f8f8f8;
+  font-size: 16px;
+  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
+}
+
+.page__hd {
+  padding: 40px;
+}
+
+.page__bd {
+  padding-bottom: 40px;
+}
+
+.page__bd_spacing {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page__ft {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.page__title {
+  text-align: left;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.page__desc {
+  margin-top: 5px;
+  color: #888;
+  text-align: left;
+  font-size: 14px;
 }
